--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,6 +1,41 @@
-body {
-  background: yellowgreen;
+nav {
+  background: pink;
+  border-radius: 10px;
 }
-body:hover {
-  background: green;
+nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 40px;
+}
+nav ul li {
+  list-style: none;
+}
+
+header h1 {
+  font-size: 3rem;
+  text-align: center;
+}
+@media screen and (max-width: 700px) {
+  header h1 {
+    font-size: 1rem;
+  }
+}
+header h1::after {
+  content: "*";
+  position: absolute;
+  -webkit-transform: translateY(-6px);
+          transform: translateY(-6px);
+  color: pink;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+header h1:hover::after {
+  -webkit-transform: scale(2);
+          transform: scale(2);
 }/*# sourceMappingURL=index.css.map */
