--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,7 +1,43 @@
-body {
-    background: yellowgreen;
+nav {
+    background: pink;
+    border-radius: 10px;
+    ul {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        height: 40px;
 
-    &:hover {
-        background: green;
+        li {
+            list-style: none;
+        }
     }
+        
 }
+
+header {
+  h1 {
+    font-size: 3rem;
+    text-align: center;
+
+    @media screen and (max-width:700px) {
+      font-size: 1rem;
+    }
+  
+    &::after {
+      content:"*";
+      position: absolute;
+      transform: translateY(-6px);
+      color: pink;
+      transition: 0.2s;
+    }
+    &:hover::after{
+      transform: scale(2);
+    }
+  }
+
+  p{
+
+  }
+}
+
+/*26:41 arrêt vidéo cours SASS
