--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,5 +1,9 @@
+body {
+  background: orange;
+}
+
 nav {
-  background: pink;
+  background: rgb(244, 48, 77);
   border-radius: 10px;
 }
 nav ul {
@@ -31,11 +35,28 @@ header h1::after {
   position: absolute;
   -webkit-transform: translateY(-6px);
           transform: translateY(-6px);
-  color: pink;
+  color: rgb(244, 48, 77);
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 header h1:hover::after {
   -webkit-transform: scale(2);
           transform: scale(2);
+}
+section {
+  height: 400px;
+  border: 1px solid rgb(15, 15, 15);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+section p {
+  width: 50%;
+  text-align: center;
 }/*# sourceMappingURL=index.css.map */
