--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,5 +1,24 @@
+// Variables -> $
+$color1 : rgb(244, 48, 77);
+$color2 : orange;
+$color3: cyan;
+$white: rgb(241, 241, 241);
+$black: rgb(15, 15, 15);
+
+// mixins
+@mixin centerchild {
+// 3 lignes suivantes pour centrer parfaitement un élément dans son parent s'il est enfant unique
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+body {
+  background: $color2;
+}
+
 nav {
-    background: pink;
+    background: $color1;
     border-radius: 10px;
     ul {
         display: flex;
@@ -27,7 +46,7 @@ header {
       content:"*";
       position: absolute;
       transform: translateY(-6px);
-      color: pink;
+      color: $color1;
       transition: 0.2s;
     }
     &:hover::after{
@@ -37,6 +56,17 @@ header {
 
   p{
 
+  }
+}
+
+section {
+  height: 400px;
+  border: 1px solid $black;
+  @include centerchild;
+
+  p {
+    width: 50%;
+    text-align: center;
   }
 }
 
