--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,72 +1,8 @@
-// Variables -> $
-$color1 : rgb(244, 48, 77);
-$color2 : orange;
-$color3: cyan;
-$white: rgb(241, 241, 241);
-$black: rgb(15, 15, 15);
+// index.scss rassemble tous les fichiers sass
 
-// mixins
-@mixin centerchild {
-// 3 lignes suivantes pour centrer parfaitement un élément dans son parent s'il est enfant unique
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-body {
-  background: $color2;
-}
-
-nav {
-    background: $color1;
-    border-radius: 10px;
-    ul {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        height: 40px;
-
-        li {
-            list-style: none;
-        }
-    }
-        
-}
-
-header {
-  h1 {
-    font-size: 3rem;
-    text-align: center;
-
-    @media screen and (max-width:700px) {
-      font-size: 1rem;
-    }
-  
-    &::after {
-      content:"*";
-      position: absolute;
-      transform: translateY(-6px);
-      color: $color1;
-      transition: 0.2s;
-    }
-    &:hover::after{
-      transform: scale(2);
-    }
-  }
-
-  p{
-
-  }
-}
-
-section {
-  height: 400px;
-  border: 1px solid $black;
-  @include centerchild;
-
-  p {
-    width: 50%;
-    text-align: center;
-  }
-}
+@import "./layout/navbar";
+@import "./layout/header";
+@import "./layout/section";
+@import "./layout/footer";
+@import "./components/buttons";
 
